--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.0",
     "react-router-dom": "7.10.1",
-    "firebase": "12.7.0"
+    "firebase": "12.7.0",
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.0.0"
   },
   "devDependencies": {
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "loader-utils": "3.2.1",
-    "typescript": "5.7.2"
+    "typescript": "4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
